syntax = "proto3";

package api.v1;

option go_package = "github.com/mattiusz/based_backend/internal/gen/proto/v1";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message LoginRequest {
  oneof auth_method {
    PasswordAuth password = 1;
    SSOAuth sso = 2;
  }
}

message PasswordAuth {
  string username = 1;
  string password = 2;
}

message SSOAuth {
  Provider provider = 1;
  string id_token = 2;
}

enum Provider {
  PROVIDER_UNSPECIFIED = 0;
  GOOGLE = 1;
  APPLE = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  repeated string claims = 2;
  string user_id = 3;
}